--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "nodemon": "^1.10.2",
     "webpack": "^1.13.2",
     "webpack-node-externals": "^1.4.3"
+  },
+  "dependencies": {
+    "lodash": "^4.16.2"
   }
 }
